# ggj2023

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  make_release.sh
assets/: city.tmx  race1.tmx  race2.tmx
assets/Tileset/: Buildings_tileset.tsx  Road_tileset.tsx
ext/hungerland/engine/include/hungerland/: texture.h
ext/hungerland/engine/src/: texture.cpp  window.cpp
ext/hungerland/examples/platformer/assets/: test_world2.tmx
include/: ai_algos.h  apply.h  gridsearch.h  meta.h  utils.h
include/car_game/: controller.h  hungerland_view.h  std_model.h
include/platformer/: platformer.h
src/: car_game_main.cpp  platformer_main.cpp
